se agrega metodo POST y GET

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
+server.servlet.context-path=/api-rest/
+server.port=8080
+
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=alquiler
+#spring.datasource.username=sa
+#spring.datasource.password=Familia20178
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=create
+#
+#spring.cachePrepStmts=true
+#server.port=8081
